# online-term

include/lib/: nstring.h
include/lib/interface/: keyboard.h  ui.h
include/lib/net/: client.h  net.h  packet.h  server.h
src/: CMakeLists.txt
src/lib/: game.c  main.c  main.cpp.OLD  nstring.c  vector.c
src/lib/interface/: keyboard.c  ui.c
src/lib/net/: client.c  net.c  server.c
